--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,5 @@
 .container {
     display: flex;
-    border: 2px solid red;
     flex-direction: column;
     justify-content: center;
     align-items: center;
@@ -14,6 +13,7 @@
     display: flex;
     align-content: space-between;
     gap: 20px;
+    margin-bottom: 15px;
 }
 
 
@@ -21,6 +21,6 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    border: 2px solid red;
+    border: 1px solid red;
     min-width: 200px;
 }
